Fix label alignment

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -45,7 +45,7 @@ a {
 
 .input-form {
   width: 100%;
-  max-width: 400px;
+  max-width: 420px;
   margin: 20px auto 0 auto;
 }
 
